--- a/ProjectTitan/ProjectTitan.vcxproj
+++ b/ProjectTitan/ProjectTitan.vcxproj
@@ -105,6 +105,10 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Test.frag" />
+    <None Include="Test.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
