--- a/ProjectTitan/ProjectTitan.vcxproj.filters
+++ b/ProjectTitan/ProjectTitan.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Chunk.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
+    <ClCompile Include="Block.cpp">
+      <Filter>Source Files\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Chunk.h">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Block.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
   </ItemGroup>
