--- a/ProjectTitan/ProjectTitan.vcxproj.filters
+++ b/ProjectTitan/ProjectTitan.vcxproj.filters
@@ -51,13 +51,16 @@
     <ClCompile Include="Chunk.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
-    <ClCompile Include="Block.cpp">
-      <Filter>Source Files\Core</Filter>
-    </ClCompile>
     <ClCompile Include="BlockManager.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
+      <Filter>Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="FastNoise.cpp">
+      <Filter>Source Files\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Block.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
   </ItemGroup>
@@ -77,13 +80,16 @@
     <ClInclude Include="Chunk.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
-    <ClInclude Include="Block.h">
-      <Filter>Header Files\Core</Filter>
-    </ClInclude>
     <ClInclude Include="BlockManager.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="FastNoise.h">
+      <Filter>Header Files\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Block.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
   </ItemGroup>
