--- a/ProjectTitan/ProjectTitan.vcxproj
+++ b/ProjectTitan/ProjectTitan.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="FastNoise.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProjectTitan.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -109,6 +110,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FastNoise.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="World.h" />
