--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/ProjectTitan.iml
+/.idea/serialmonitor_settings.xml
+/.idea/vcs.xml
